# lv8_port_esp32

./: .gitignore  .gitmodules  README.md  sdkconfig  sdkconfig.defaults
components/lv_examples/: lv_demo_conf.h
components/lvgl/: Kconfig  lv_conf.h
components/lvgl_esp32_drivers/: lvgl_helpers.c
components/lvgl_esp32_drivers/lvgl_touch/: ft6x36.h
main/: CMakeLists.txt  can.cpp  can.h  dash.c  dash.h  lvgl_esp.c  lvgl_esp.h  main.c  main.cpp  mono_mmm_5_36.c
